testsuite/tests/semantic_errors/invalid_array_concat/test.out
Analyzing test.adb
##################

Resolving xrefs for node <ObjectDecl ["V"] test.adb:3:4-3:27>
*************************************************************

test.adb:3:23: error: no matching operator found
3 |    V : String := "ab" & X;
  |                       ^



Done.
